# mcp-organizze

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  README.md  openapi.yaml  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: docker-publish.yml  publish.yml
src/mcp_organizze/: __main__.py  openapi.yaml  server.py
